fixed issue in data and added white space on the sides of item display page

--- a/src/CSS/Homepage.css
+++ b/src/CSS/Homepage.css
@@ -1,8 +1,10 @@
 #boxes {
-    display:grid;
+    display: grid;
     border-top: 1px solid grey;
     justify-items: center;
     grid-template-columns: 100%;
+    width: 95%;
+    margin: auto;
 }
 
 #stars {
